--- a/sources/style.css
+++ b/sources/style.css
@@ -65,3 +65,13 @@ li {
 .highest-lowest {
   font-size: 20px;
 }
+
+#main-image {
+  width: 150px;
+  margin: 10px 0 10px 40px;
+}
+
+#weather-description {
+  margin: 10px 0 10px 55px;
+  font-size: 15px;
+}
