--- a/sources/style.css
+++ b/sources/style.css
@@ -70,13 +70,22 @@ li {
   margin: 5px 0px;
 }
 
+.link {
+  text-decoration: none;
+  color: #549ecd;
+}
+
+.active {
+  color: #3d4377;
+  text-decoration: none;
+  cursor: default;
+}
+
 #celsius-link {
   font-family: "IBM Plex Mono", monospace;
   font-size: 20px;
   position: relative;
   top: -15px;
-  text-decoration: none;
-  color: #3d4377;
 }
 
 #inbetween {
@@ -91,8 +100,6 @@ li {
   font-size: 20px;
   position: relative;
   top: -15px;
-  text-decoration: none;
-  color: #3d4377;
 }
 
 .highest-lowest {
@@ -105,22 +112,26 @@ li {
 }
 
 #weather-description {
-  margin: 10px 0 10px 70px;
+  display: block;
+  margin: 10px auto;
   font-size: 12px;
+  text-align: center;
 }
 
 .additional-info {
-  background: rgb(227, 184, 191, 0.3);
+  display: block;
   margin: 30px auto;
-  max-width: 400px;
+  padding-left: 40px;
   height: 100px;
 }
 
 .additional-info td {
+  background: rgb(227, 184, 191, 0.3);
   color: #3d4377;
-  margin: 10px auto;
+  margin: 10px;
   padding: 15px;
   font-size: 15px;
+  width: 200px;
 }
 
 .coder {
