--- a/sources/style.css
+++ b/sources/style.css
@@ -55,7 +55,7 @@ li {
 .main-city {
   margin: 30px 10px 5px 10px;
   font-family: "Press Start 2P", cursive;
-  font-size: 30px;
+  font-size: 23px;
   font-weight: bolder;
 }
 
@@ -81,7 +81,7 @@ li {
   cursor: default;
 }
 
-#celsius-link {
+#celsius {
   font-family: "IBM Plex Mono", monospace;
   font-size: 20px;
   position: relative;
